tools/flowc/tests/errors/for_error.flow
import runtime;

export {
    doubleAllElements(numbers : [int]) -> [int];
}

// Incorrect implementation using a for loop
doubleAllElements(numbers : [int]) -> [int] {
    result = [];
    
    // Error: Flow9 doesn't support for loops
    for (i = 0; i < length(numbers); i = i + 1) {
        result = concat(result, [numbers[i] * 2]);
    }
    
    result;
}

// The correct way would be:
/*
doubleAllElements(numbers : [int]) -> [int] {
    map(numbers, \n -> n * 2);
}
*/